[package]
name        = "imruski-injector"
version     = "0.1.0"
edition     = "2021"
description = "ImRuski manual-map DLL injector for DX11 targets"

[[bin]]
name = "imruski-injector"
path = "src/main.rs"

[dependencies]
anyhow = "1"

[target.'cfg(windows)'.dependencies.windows]
version  = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
]
